shifting to smaller image because background fixed does not work on mobile

--- a/css/sass/_mobile.scss
+++ b/css/sass/_mobile.scss
@@ -3,14 +3,9 @@
 @import "compass/typography";
 @import "susy";
 
-body {
-    background: url('../images/bg_small.jpg') no-repeat top center fixed;
-    background-size: cover;
-}
 #wrap {
     padding-left: 1em;
     padding-right: 1em;
-    background-color: rgba(255,255,255,.5);
 }
 
 textarea {
