--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -16,7 +16,7 @@
 }
 
 body {
-    background: url('../images/bg.jpg') no-repeat top center fixed;
+    background: url('../images/bg_small.jpg') no-repeat top center fixed;
     background-size: cover;
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: $base-font-size;
