--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@
 
   /* line 18, sass/_screen.scss */
   body {
-    background: url("../images/bg.jpg") no-repeat top center fixed;
+    background: url("../images/bg_small.jpg") no-repeat top center fixed;
     background-size: cover;
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: 14px;
@@ -838,35 +838,28 @@
 }
 @media screen and (max-width: 500px) {
   /* line 6, sass/_mobile.scss */
-  body {
-    background: url("../images/bg_small.jpg") no-repeat top center fixed;
-    background-size: cover;
-  }
-
-  /* line 10, sass/_mobile.scss */
   #wrap {
     padding-left: 1em;
     padding-right: 1em;
-    background-color: rgba(255, 255, 255, 0.5);
   }
 
-  /* line 16, sass/_mobile.scss */
+  /* line 11, sass/_mobile.scss */
   textarea {
     max-width: 300px;
   }
 
-  /* line 20, sass/_mobile.scss */
+  /* line 15, sass/_mobile.scss */
   #top-nav {
     text-align: left;
   }
 
-  /* line 23, sass/_mobile.scss */
+  /* line 18, sass/_mobile.scss */
   .pagination-nav {
     border-bottom: none;
     margin-bottom: initial;
   }
 
-  /* line 27, sass/_mobile.scss */
+  /* line 22, sass/_mobile.scss */
   #sort-links {
     width: 100%;
     float: left;
@@ -876,20 +869,20 @@
     padding-bottom: 1.5em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   }
-  /* line 35, sass/_mobile.scss */
+  /* line 30, sass/_mobile.scss */
   #sort-links .sort-label {
     background-color: #fff;
     padding: 0.575em 7px 0.575em 10px;
   }
 
-  /* line 40, sass/_mobile.scss */
+  /* line 35, sass/_mobile.scss */
   #home .text, #home .secondary {
     padding: 1em .5em;
     font-size: 14px;
     line-height: 24px;
   }
 
-  /* line 45, sass/_mobile.scss */
+  /* line 40, sass/_mobile.scss */
   #home .collection .collection-description {
     width: 100%;
     float: left;
@@ -900,40 +893,40 @@
           width:47%;
       }
   }*/
-  /* line 55, sass/_mobile.scss */
+  /* line 50, sass/_mobile.scss */
   #contribution-item-metadata, #contribution-type-form, #contribution-confirm-submit {
     max-width: 100% !important;
   }
 
-  /* line 59, sass/_mobile.scss */
+  /* line 54, sass/_mobile.scss */
   #recaptcha_area, #recaptcha_table {
     max-width: 300px !important;
   }
 
-  /* line 63, sass/_mobile.scss */
+  /* line 58, sass/_mobile.scss */
   #contribution-type-form .contribution-userprofile .two.columns.alpha {
     width: 100%;
     float: left;
   }
-  /* line 67, sass/_mobile.scss */
+  /* line 62, sass/_mobile.scss */
   #contribution-type-form .contribution-userprofile .five.columns.omega {
     float: left;
     margin: 10px 0 0;
   }
 
-  /* line 74, sass/_mobile.scss */
+  /* line 69, sass/_mobile.scss */
   #about #content, #faqs #content, #staff #content, #partners #content {
     padding-right: 0;
   }
 
-  /* line 79, sass/_mobile.scss */
+  /* line 74, sass/_mobile.scss */
   .gallery img {
     width: 100%;
     float: left;
     background-color: #fff;
     margin-bottom: 1.64286em;
   }
-  /* line 85, sass/_mobile.scss */
+  /* line 80, sass/_mobile.scss */
   .gallery p {
     width: 100%;
     float: left;
